docs: update documentation for data-agent improvements
AGENTS.md:
- Add Data Agent entry to Progress/Done with 22 subcommands
- Add 17 new API behaviors discovered from fabric-data-agent-sdk
  (v0.1.24a0): internal workload API, schema discovery endpoint,
  M365 publishing endpoint, datasource type mapping, element types,
  preview runtime, few-shot evaluation, limits, cross-region rules
- Update Relevant Files with full subcommand listing
- Update test file description with 34 tests

COMMANDS.md:
- Expand data-agent from 9 to 22 commands with flag descriptions

EXAMPLES.md:
- Rewrite Data Agents section with comprehensive examples covering:
  configuration, datasource management, table selection, element
  descriptions, few-shot examples (JSON + CSV), publishing (+ M365),
  querying (--stage, --timeout, --show-steps, stdin), and low-level
  definition access

README.md:
- Update capability table with 22 subcommands description
- Update feature list with datasource/fewshot/config management

agent_context_commands.json:
- Add --instructions-file to update-config schema
- Update upload-fewshots file description (JSON + CSV/TSV)

Assisted-by: OpenCode:claude-opus-4.6